--- a/src/pages/peoples/index.astro
+++ b/src/pages/peoples/index.astro
@@ -10,64 +10,28 @@ const headings = [
   { depth: 2, slug: 'community-members', text: '社区成员' }
 ]
 
-const members = [
-  {
-    id: 'acondaway',
-    name: 'ACondawayUNo（徐聪晟）',
-    avatar: 'https://avatars.githubusercontent.com/u/115391544?v=4',
-    organization: 'SJTU ScaleLab',
-    role: '社区创始人',
-    slogan: '人机合一，化具象为抽象。',
-    href: '/peoples/acondaway',
-    description: '专注于具身智能研究，致力于推动人机交互技术的发展。在计算机视觉和深度学习领域有丰富经验。',
-    github: 'https://github.com/ACondawayUNo',
-    website: 'https://acondaway.github.io/',
-    email: 'acondaway@sjtu.edu.cn',
-    linkedin: 'https://www.linkedin.com/in/acondaway'
-  },
-  {
-    id: 'andreo',
-    name: 'Andreo（杨锦畅）',
-    avatar: 'https://avatars.githubusercontent.com/u/33977087?v=4',
-    organization: 'SJTU',
-    role: '社区网页设计师',
-    slogan: '我是关羽',
-    href: '/peoples/andreo',
-    description: '专注于前端开发和用户体验设计，致力于创造美观且实用的Web界面，管理后端数据库。对深度强化学习、世界模型等具身相关领域有浓厚兴趣。',
-    github: 'https://github.com/hzyangjc',
-    website: 'https://andreoy.cn',
-    email: 'andreo_y@sjtu.edu.cn',
-    bilibili: 'https://space.bilibili.com/390331430'
-  },
-  {
-    id: 'violet',
-    name: 'Violet（刘伊天）',
-    avatar: 'https://avatars.githubusercontent.com/u/113980234?v=4',
-    organization: 'SJTU ScaleLab',
-    role: '社区运营团队负责人',
-    slogan: '我也是个人',
-    href: '/peoples/violet',
-    description: '负责社区运营和项目管理，致力于构建活跃的开发者社区。',
-    github: 'https://github.com/VioletEvar',
-    email: 'violet@sjtu.edu.cn',
-    linkedin: 'https://www.linkedin.com/in/violet-liu'
-  },
-  {
-    id: 'huainan',
-    name: 'HuaiNan（帅哲）',
-    avatar: 'https://avatars.githubusercontent.com/u/165187020?v=4',
-    organization: 'SJTU DS',
-    role: '社区视觉传达总设计师',
-    slogan: '我也是个人',
-    href: '/peoples/huainan',
-    description: '专注于视觉传达设计，负责社区品牌形象和视觉设计工作。',
-    github: 'https://github.com/HuaiNanPror',
-    website: 'https://huainan.design',
-    email: 'huainan@sjtu.edu.cn',
-    behance: 'https://www.behance.net/huainan',
-    dribbble: 'https://dribbble.com/huainan'
-  }
-]
+import { getAllMembers } from '@/utils/members'
+
+const members = getAllMembers().map(member => ({
+  id: member.id,
+  name: member.name,
+  avatar: member.avatar,
+  organization: member.organization,
+  role: member.role,
+  slogan: member.slogan,
+  href: `/peoples/${member.id}`,
+  description: member.description,
+  github: member.github,
+  website: member.website,
+  email: member.email,
+  linkedin: member.linkedin,
+  bilibili: member.bilibili,
+  behance: member.behance,
+  dribbble: member.dribbble,
+  xiaohongshu: member.xiaohongshu,
+  x: member.x,
+  instagram: member.instagram
+}))
 ---
 
 <PageLayout title='社区成员' {headings} info='/peoples'>
@@ -155,6 +119,24 @@ const members = [
                     <Button href={member.behance} target='_blank' style='outline' class='inline-flex items-center gap-1 text-xs'>
                       <Icon name="link" class="w-4 h-4" />
                       Behance
+                    </Button>
+                  )}
+                  {member.xiaohongshu && (
+                    <Button href={member.xiaohongshu} target='_blank' style='outline' class='inline-flex items-center gap-1 text-xs'>
+                      <Icon name="link" class="w-4 h-4" />
+                      小红书
+                    </Button>
+                  )}
+                  {member.x && (
+                    <Button href={member.x} target='_blank' style='outline' class='inline-flex items-center gap-1 text-xs'>
+                      <Icon name="x" class="w-4 h-4" />
+                      X
+                    </Button>
+                  )}
+                  {member.instagram && (
+                    <Button href={member.instagram} target='_blank' style='outline' class='inline-flex items-center gap-1 text-xs'>
+                      <Icon name="link" class="w-4 h-4" />
+                      Instagram
                     </Button>
                   )}
                 </div>
