--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -39,20 +39,22 @@ const headings = [
     VapourX 的标志凝聚了我们对未来具身智能的愿景与信念。左侧放射状的图形，灵感来自神经元网络与群体协作系统，象征着人类、数字人和机器人之间高度自然且动态的感知连接。中央文字以现代几何字体呈现，融合断裂与弧度的设计语言，传达出智能系统的有机性与进化性，而结尾的 “X” 则代表交互、未知与融合的前沿探索。整体黑白配色简洁而充满力量，彰显 VapourX 作为一个面向未来、连接现实与虚拟的具身智能社区，将科技、人性与协同创新无缝交织，激励我们共同走向智能交互的新纪元。
   </p>
   <h2 id='what-we-need'>我们需要的！</h2>
+  <p>我们欢迎来自各个阶段、各个背景的伙伴加入 VapourX：</p>
   <ul>
-    <li>具身智能领域深耕的研究者。</li>
-    <li>初出茅庐的具身智能小白。</li>
-    <li>在其他领域有技术积累并想要转向具身智能的开发者。</li>
-    <li>对具身智能有兴趣的爱好者。</li>
+    <li>在具身智能领域深耕多年的研究者</li>
+    <li>刚踏入具身智能世界的探索者</li>
+    <li>在其他领域已有技术积累、希望转向具身智能的开发者</li>
+    <li>对具身智能充满好奇与热情的爱好者</li>
   </ul>
   <p>
-    总的来说，只要你对具身智能有热情，想要为社区做出各种意义的贡献，欢迎你加入VapourX的大家庭！
+    无论你是经验丰富的专家，还是怀揣好奇心的新人，只要你热爱具身智能，并愿意为社区贡献力量，这里都为你敞开大门。
   </p>
   <p>
     如果你想要加入VapourX，请通过以下方式联系我们：
   </p>
   <ul>
     <li>邮箱：<a href='mailto:vapourx-open-forum@outlook.com'>vapourx-open-forum@outlook.com</a></li>
+    <li>成员信息表单：<a href='/member-form'>填写成员信息表单</a> - 填写完成后可下载对应的JSON文件，将该文件附在邮件中发送给我们</li>
   </ul>
 
   {/* team members */}
